[tool.poetry]
name = "Cracking Caesar's Cipher
version = "0.1.0"
description = "Deciphers Caesar's Cipher in every key"
authors = ["JaNiah Harris"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
urllib3 = "1.26.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"